--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- FONT AWSOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
 </head>
 <body>
     <!-- top fixed navbar -->
@@ -52,8 +57,8 @@
 
     <div class="container-fluid">
         <div class="row flex-nowrap">
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+            <div class="col-auto col-md-3 col-xl-1 px-sm-2 px-0 bg-dark">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white">
                     <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                         <span class="fs-5 d-none d-sm-inline">Menu</span>
                     </a>
@@ -132,12 +137,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-10  p-0">
+            <div class="col-lg-11  p-0">
 
                 <!-- main header section -->
 
-                <section class=" ms_d_flex">
-                    <div class="row">
+                <section >
+                    <div id="ms_row_modify" class="row bg-primary ">
 
                         <div class="col-4 ms_col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi cumque itaque beatae quas ipsa. Laborum molestias temporibus repudiandae minima quam velit a totam pariatur obcaecati. Modi aperiam veniam assumenda ratione?</div>
                         <div class="col-4 ms_col">Lorem ipsum dolor sit amet consectetur?<br>
@@ -165,56 +170,71 @@
                                 <div class="table_top"><h2>Prossime classi</h2></div>
                                 <thead>
                                   <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th class="col-4">Nome</th>
+                                    <th class="col-2">Data Inizio</th>
+                                    <th class="col-2">ROI</th>
+                                    <th class="col-2">Stato</th>
+                                    <th class="col-2">Azioni</th>
                                   </tr>
                                 </thead>
                                 <tbody>
                                   <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="class-avatar">Classe 75</td>
+                                    <td>15 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-success">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 76</td>
+                                    <td>16 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-success">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 77</td>
+                                    <td>17 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-warning">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 78</td>
+                                    <td>18 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-success">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 79</td>
+                                    <td>19 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-danger">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 80</td>
+                                    <td>20 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-success">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 81</td>
+                                    <td>21 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-danger">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">3</th>
-                                    <td colspan="2">Larry the Bird</td>
-                                    <td>@twitter</td>
+                                    <td class="row"><img src="img(33)/img/class-avatar.jpg" id="class-avatar" alt="">Classe 82</td>
+                                    <td>22 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><div class="badge bg-success">Done</div></td>
+                                    <td><i class="fa-solid fa-square-pen"></i><i class="fa-solid fa-trash"></i></td>
                                   </tr>
-                                  <th scope="row"></th>
+                                  <td class="row"></td>
                                   <td colspan="2"></td>
                                   <td></td>
                                 </tr>
@@ -275,7 +295,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <div class="card card-white">
+                                    <div class="card card-white ms_mar-int_box_t_b">
                                         <div class="card-body">
                                             <div class="todo-list">
                                                 <div class="todo-item d-flex">
